# cros-codecs

./: Cargo.toml
src/: backend.rs  decoder.rs  encoder.rs  image_processing.rs  lib.rs  utils.rs  video_frame.rs
src/backend/: vaapi.rs
src/backend/v4l2/: encoder.rs
src/backend/vaapi/: decoder.rs  encoder.rs
src/c2_wrapper/: c2_encoder.rs
src/codec/: h265.rs
src/codec/av1/: parser.rs
src/codec/h264/: nalu_writer.rs  parser.rs
src/codec/h265/: parser.rs  synthesizer.rs
src/decoder/: stateless.rs
src/decoder/stateless/: av1.rs  h264.rs  h265.rs  vp8.rs  vp9.rs
src/decoder/stateless/av1/: vaapi.rs
src/decoder/stateless/h264/: vaapi.rs
src/decoder/stateless/h265/: vaapi.rs
src/decoder/stateless/vp8/: vaapi.rs
src/decoder/stateless/vp9/: vaapi.rs
src/encoder/: av1.rs  h264.rs  h265.rs  stateful.rs  stateless.rs
src/encoder/stateless/: av1.rs  h264.rs  h265.rs  predictor.rs  vp9.rs
src/encoder/stateless/av1/: predictor.rs  tests.rs  vaapi.rs
src/encoder/stateless/h264/: predictor.rs  tests.rs  vaapi.rs
src/encoder/stateless/h265/: predictor.rs  tests.rs  vaapi.rs
src/encoder/stateless/vp9/: vaapi.rs
src/video_frame/: frame_pool.rs  gbm_video_frame.rs  generic_dma_video_frame.rs
